# fantacalcio-pp

./: Cargo.toml  README.md  index.html
app/: index.html
src/: main.rs
