[package]
name = "fantacalcio-pp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.rocket]
version = "0.5.0-rc.2"
features = ["json"]

[dependencies.serde]
version = "1.0.152"
features = ["derive"]

# Winreg (modify the Windows registry, not needed now)
#[dependencies.winreg]
#version = "0.11"